Made A lot of fixes